# llama.cpp

./: CMakeLists.txt
common/: CMakeLists.txt  arg.cpp  common.cpp  common.h
docs/backend/: OPENVINO.md
examples/llama.android/lib/src/main/cpp/: ai_chat.cpp
examples/passkey/: passkey.cpp
ggml/include/: ggml.h
ggml/src/: ggml.c
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.c
ggml/src/ggml-cuda/: CMakeLists.txt  common.cuh  convert.cu  fattn-common.cuh  fattn-vec.cuh  fattn.cu  getrows.cu  ggml-cuda.cu  mmvq.cu  set-rows.cu  tq-quants.cuh  vecdotq.cuh
ggml/src/ggml-cuda/template-instances/: fattn-vec-instance-tq-uniform-4b.cu
src/: CMakeLists.txt  llama-turboquant.cpp  llama-turboquant.h  llama.cpp
src/models/: deepseek2.cpp  kimi-linear.cpp
tools/cli/: README.md  cli.cpp
tools/completion/: README.md  completion.cpp
tools/llama-bench/: CMakeLists.txt  llama-bench.cpp
tools/server/: README.md  chat-llama2.sh  chat.mjs  chat.sh  server-common.h  server-context.cpp  server-task.cpp  server-task.h
tools/server/tests/: utils.py
tools/server/tests/unit/: test_speculative.py
tools/server/webui/src/lib/services/: parameter-sync.service.spec.ts
tools/server/webui/src/lib/types/: api.d.ts
